# whitesoft-Student-2023-assignment

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
program/: WStest
